--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,9 +2,10 @@
 @import "variables";
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "../../node_modules/bootstrap-vue/dist/bootstrap-vue";
+@import "../../node_modules/vue-scroll-between/dist/lib/vue-scroll-between.min";
 
 
-hmml, body{
+hmml, body {
   padding: 0px;
   margin: 0px;
 }
