--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -5,7 +5,7 @@ $orange: #bf360c;
 $yellow: #fbc02d;
 $green:  #1b5e20;
 $blue:   #002171;
-$teal:   #29ABE2;
+$teal:   #0071bc;
 $pink:   #880e4f;
 $purple: #4a148c;
 
@@ -16,8 +16,8 @@ $gray-lighter:  #eceeef;
 $gray-lightest: #f7f7f9;
 
 $brand-primary: $teal;
-$brand-success: $purple;
-$brand-info:    $teal;
+$brand-success: $green;
+$brand-info:    $purple;
 $brand-warning: $orange;
 $brand-danger:  $red;
 $brand-inverse: $gray-dark;
